# rgb_splitter

./: .gitignore  README.md  pyproject.toml
src/rgb_splitter/: cli.py  core.py
