[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rgb-splitter"
version = "0.1.0"
description = "CLI tool to split RGGB CFA FITS files into R/G/B channels."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Yigit Can Atilgan"}]

dependencies = [
  "numpy>=1.23",
  "astropy>=5.3",
  "tqdm>=4.66",
]

[project.scripts]
rgb-split = "rgb_splitter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
